[tool.poetry]
name = "gaccountchecker"
version = "0.1.0"
description = "Automated method to test whether a list of emails has associated Google accounts."
authors = ["David Roizenman <david@hmnd.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "1.1.1"
tqdm = "^4.33.0"
requests = "^2.22.0"
fake-useragent = "^0.1.11"
selenium = "^3.141.0"
webdriver_manager = "^3.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
black = "^19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
