[tool.poetry]
name = "gaccountchecker"
version = "3.0.0"
description = "Automated method to test whether a list of emails has associated Google accounts."
authors = ["David Roizenman <david@hmnd.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "1.1.1"
tqdm = "4.48.2"
requests = "2.24.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
flake8 = "3.8.3"
black = "20.8b1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
